/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    java
    application
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation(libs.junit)
    implementation ("org.xerial:sqlite-jdbc:3.46.0.0")
    implementation ("org.jdatepicker:jdatepicker:1.3.4")
    implementation("com.formdev:flatlaf:3.4.1")
    implementation ("io.github.dj-raven:swing-datetime-picker:2.1.3")
    implementation("com.formdev:flatlaf-extras:3.4.1")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = "org.hotel.Main"
}
